executable("raise_test") {
  cflags = ["-g", "-Wall"]
  sources = ["raise_test.c"]
}

executable("SIGKILL_test") {
  cflags = ["-g", "-Wall"]
  sources = ["SIGKILL_test.c"]
}

executable("sigprocmask_test") {
  cflags = ["-g", "-Wall"]
  sources = ["sigprocmask_test.c"]
}

executable("kill_test") {
  cflags = ["-g", "-Wall"]
  sources = ["kill_test.c"]
}

executable("sigemptyset_test") {
  cflags = ["-g", "-Wall"]
  sources = ["sigemptyset_test.c"]
}

executable("signal4_test") {
  cflags = ["-g", "-Wall"]
  sources = ["signal4_test.c"]
}

executable("SIGFPE_test") {
  cflags = ["-g", "-Wall"]
  sources = ["SIGFPE_test.c"]
}

executable("SIG_IGN_test") {
  cflags = ["-g", "-Wall"]
  sources = ["SIG_IGN_test.c"]
}

executable("signal3_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "signal3_test.c",
  ]
}

executable("signal2_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "signal2_test.c",
  ]
}

executable("sigaction_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "sigaction_test.c",
  ]
}

executable("signal1_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "signal1_test.c",
  ]
}

executable("signal_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "signal_test.c",
  ]
}
