executable("fflush_test") {
  sources = [
    "fflush_test.c",
  ]
}

executable("fseek_test") {
  sources = [
    "fseek_test.c",
  ]
}

executable("sprintf_test") {
  sources = [
    "sprintf_test.c",
  ]
}

executable("fread_test") {
  sources = [
    "fread_test.c",
  ]
}

executable("fgetc_test") {
  sources = [
    "fgetc_test.c",
  ]
}

executable("fopen_test") {
  sources = [
    "fopen_test.c",
  ]
}

executable("fopen1_test") {
  sources = [
    "fopen1_test.c",
  ]
  
  include_dirs = ["//include"]
  deps = [
    "//lib:libc",
  ]
}

executable("tmpfile_test") {
  sources = [
    "tmpfile_test.c",
  ]
  
  include_dirs = ["//include"]
  deps = [
    "//lib:libc",
  ]
}

executable("fgets_test") {
  sources = [
    "fgets_test.c",
  ]
  
  include_dirs = ["//include"]
  deps = [
    "//lib:libc",
  ]
}

executable("getc_test") {
  sources = [
    "getc_test.c",
  ]
  
  include_dirs = ["//include"]

  deps = [
    "//lib:libc",
  ]
}

executable("write_test") {
  sources = [
    "write_test.c",
  ]
  deps = [
    "//lib:libc",
  ]
}
