executable("getline_test") {
  sources = [
    "getline_test.c",
  ]
}

executable("fflush_test") {
  sources = [
    "fflush_test.c",
  ]
}

executable("fseek_test") {
  sources = [
    "fseek_test.c",
  ]
}

executable("sprintf_test") {
  sources = [
    "sprintf_test.c",
  ]
}

executable("fread_test") {
  sources = [
    "fread_test.c",
  ]
}

executable("fgetc_test") {
  sources = [
    "fgetc_test.c",
  ]
}

executable("fopen_test") {
  sources = [
    "fopen_test.c",
  ]
}

executable("fopen1_test") {
  sources = [
    "fopen1_test.c",
  ]
}

executable("tmpfile_test") {
  sources = [
    "tmpfile_test.c",
  ]
}

executable("fgets_test") {
  sources = [
    "fgets_test.c",
  ]
}

executable("getc_test") {
  sources = [
    "getc_test.c",
  ]
  
}

executable("write_test") {
  sources = [
    "write_test.c",
  ]
}
