executable("STDERR_test") {
  cflags = ["-g", "-Wall", "-static"]

  # 静态连接 
  ldflags = ["-static"]

  sources = [
    "STDERR_test.c",
  ]
}

executable("print_time") {
  cflags = ["-g", "-Wall", "-static"]

  # 静态连接 
  ldflags = ["-static"]

  # libs = ["stdc++"]

  sources = [
    "print_time.c",
  ]
}

executable("feof_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "feof_test.c",
  ]
}

executable("hex_str_To_hex") {
  cflags = ["-g", "-Wall"]

  sources = [
    "hex_str_To_hex.c",
  ]
}

executable("scanf_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "scanf_test.c",
  ]
}

executable("buf_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "buf_test_bug.c",
  ]
}

executable("fgets1_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "fgets1_test.c",
  ]
}

executable("strtoul_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "strtoul_test.c",
  ]
}

executable("strtol_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "strtol_test.c",
  ]
}

executable("snprintf_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "snprintf_test.c",
  ]
}

executable("getchar_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "getchar_test.c",
  ]
}

executable("putchar_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "putchar_test.c",
  ]
}

executable("fwrite_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "fwrite_test.c",
  ]
}

executable("fdopen_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "fdopen_test.c",
  ]
}

executable("fileno_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "fileno_test.c",
  ]
}

executable("getline_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "getline_test.c",
  ]
}

executable("fflush_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "fflush_test.c",
  ]
}

executable("fseek_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "fseek_test.c",
  ]
}

executable("sprintf_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "sprintf_test.c",
  ]
}

executable("fread_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "fread_test.c",
  ]
}

executable("fgetc_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "fgetc_test.c",
  ]
}

executable("fopen_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "fopen_test.c",
  ]
}

executable("fopen1_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "fopen1_test.c",
  ]
}

executable("tmpfile_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "tmpfile_test.c",
  ]
}

executable("fgets_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "fgets_test.c",
  ]
}

executable("getc_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "getc_test.c",
  ]
  
}

executable("write_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "write_test.c",
  ]
}
