executable("free_test") {
  sources = [
    "free_test.c",
  ]
}

executable("atoi_test") {
  sources = [
    "atoi_test.c",
  ]
}

executable("realloc_test") {
  sources = [
    "realloc_test.c",
  ]
}

executable("malloc_test") {
  sources = [
    "malloc_test.c",
  ]
}

executable("calloc_test") {
  sources = [
    "calloc_test.c",
  ]
}

executable("srand_test") {
  cflags = ["-g"]

  sources = [
    "srand_test.c",
  ]
}

executable("system3_test") {
  cflags = ["-g"]

  sources = [
    "system3_test.c",
  ]
}

executable("system2_test") {
  cflags = ["-g"]

  sources = [
    "system2_test.c",
  ]
}

executable("system_test") {
  cflags = ["-g"]

  sources = [
    "system_test.c",
  ]
}

executable("atexit_test") {
  cflags = ["-g"]

  sources = [
    "atexit_test.c",
  ]
}

executable("mkstemp_test") {
  cflags = ["-g"]

  sources = [
    "mkstemp_test.c",
  ]
}

executable("getenv_test") {
  cflags = ["-g"]

  sources = [
    "getenv_test.c",
  ]
}
