executable("srandom_test") {
  cflags = ["-g"]
  sources = [
    "srandom_test.c",
  ]
}

executable("setenv_test") {
  cflags = ["-g"]
  sources = [
    "setenv_test.c",
  ]
}

executable("WIFSIGNALED_test") {
  cflags = ["-g"]
  sources = [
    "WIFSIGNALED_test.c",
  ]
}

executable("WEXITSTATUS_test") {
  cflags = ["-g"]
  sources = [
    "WEXITSTATUS_test.c",
  ]
}

executable("WIFEXITED_test") {
  cflags = ["-g"]
  sources = [
    "WIFEXITED_test.c",
  ]
}

executable("free_test") {
  cflags = ["-g"]
  sources = [
    "free_test.c",
  ]
}

executable("atoi_test") {
  cflags = ["-g"]
  sources = [
    "atoi_test.c",
  ]
}

executable("realloc_test") {
  cflags = ["-g"]
  sources = [
    "realloc_test.c",
  ]
}

executable("malloc_test") {
  cflags = ["-g"]
  sources = [
    "malloc_test.c",
  ]
}

executable("calloc_test") {
  cflags = ["-g"]
  sources = [
    "calloc_test.c",
  ]
}

executable("srand_test") {
  cflags = ["-g"]

  sources = [
    "srand_test.c",
  ]
}

executable("system3_test") {
  cflags = ["-g"]

  sources = [
    "system3_test.c",
  ]
}

executable("system2_test") {
  cflags = ["-g"]

  sources = [
    "system2_test.c",
  ]
}

executable("system_test") {
  cflags = ["-g"]

  sources = [
    "system_test.c",
  ]
}

executable("atexit_test") {
  cflags = ["-g"]

  sources = [
    "atexit_test.c",
  ]
}

executable("mkstemp_test") {
  cflags = ["-g"]

  sources = [
    "mkstemp_test.c",
  ]
}

executable("getenv_test") {
  cflags = ["-g"]

  sources = [
    "getenv_test.c",
  ]
}
