executable("aligned_alloc_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "aligned_alloc_test.c",
  ]
}

executable("qsort_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "qsort_test.c",
  ]
}

executable("srandom_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "srandom_test.c",
  ]
}

executable("setenv_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "setenv_test.c",
  ]
}

executable("WIFSIGNALED_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "WIFSIGNALED_test.c",
  ]
}

executable("WEXITSTATUS_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "WEXITSTATUS_test.c",
  ]
}

executable("WIFEXITED_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "WIFEXITED_test.c",
  ]
}

executable("free_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "free_test.c",
  ]
}

executable("atoi_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "atoi_test.c",
  ]
}

executable("realloc_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "realloc_test.c",
  ]
}

executable("malloc_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "malloc_test.c",
  ]
}

executable("calloc_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "calloc_test.c",
  ]
}

executable("srand_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "srand_test.c",
  ]
}

executable("system3_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "system3_test.c",
  ]
}

executable("system2_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "system2_test.c",
  ]
}

executable("system_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "system_test.c",
  ]
}

executable("atexit_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "atexit_test.c",
  ]
}

executable("mkstemp_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "mkstemp_test.c",
  ]
}

executable("getenv_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "getenv_test.c",
  ]
}
