executable("strstr_test") {
  cflags = ["-g"]

  sources = [
    "strstr_test.c",
  ]
}

executable("strtok_test") {
  cflags = ["-g"]

  sources = [
    "strtok_test.c",
  ]
}

executable("strcmp_test") {
  cflags = ["-g"]

  sources = [
    "strcmp_test.c",
  ]
}

executable("strcat_test") {
  cflags = ["-g"]

  sources = [
    "strcat_test.c",
  ]
}

executable("strerror_test") {
  cflags = ["-g"]

  sources = [
    "strerror_test.c",
  ]
}

executable("memmove_test") {
  cflags = ["-g"]

  sources = [
    "memmove_test.c",
  ]
}

executable("memset_test") {
  cflags = ["-g"]

  sources = [
    "memset_test.c",
  ]
  
}

executable("memcpy_test") {
  cflags = ["-g"]

  sources = [
    "memcpy_test.c",
  ]
}
