executable("strrchr_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "strrchr_test.c",
  ]
}

executable("strchr_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "strchr_test.c",
  ]
}


executable("strncmp_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "strncmp_test.c",
  ]
}

executable("strlen_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "strlen_test.c",
  ]
}

executable("strcoll_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "strcoll_test.c",
  ]
}

executable("strstr_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "strstr_test.c",
  ]
}

executable("strtok_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "strtok_test.c",
  ]
}

executable("strcmp_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "strcmp_test.c",
  ]
}

executable("strcat_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "strcat_test.c",
  ]
}

executable("strerror_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "strerror_test.c",
  ]
}

executable("memmove_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "memmove_test.c",
  ]
}

executable("memset_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "memset_test.c",
  ]
  
}

executable("memcpy_test") {
  cflags = ["-g", "-Wall"]

  sources = [
    "memcpy_test.c",
  ]
}
