
executable("SO_BINDTODEVICE_test") {
  cflags = ["-g", "-Wall"]
  sources = [ "SO_BINDTODEVICE_test.c" ]
}

executable("listen_test") {
  cflags = ["-g", "-Wall"]
  sources = [ "listen_test.c" ]
}

executable("getsockopt_test") {
  cflags = ["-g", "-Wall"]
  sources = [ "getsockopt_test.c" ]
}

executable("sendmsg_test") {
  cflags = ["-g", "-Wall"]
  sources = [ "sendmsg_test.c" ]
}

executable("socketpair_test") {
  cflags = ["-g", "-Wall"]
  sources = [ "socketpair_test.c" ]
}

executable("AF_LOCAL_test") {
  cflags = ["-g", "-Wall"]
  sources = [ "AF_LOCAL_test.c" ]
}


executable("settimeout") {
  cflags = ["-g", "-Wall"]
  sources = [ "settimeout.c" ]
}


executable("test_setopt_error") {
  cflags = ["-g", "-Wall"]
  sources = [ "test_setopt_error.c" ]
}
