executable("mkdir_test") {
  cflags = ["-g", "-Wall"]
  sources = [ "mkdir_test.c" ]
}

executable("stat1_test") {
  cflags = ["-g", "-Wall"]
  sources = [ "stat1_test.c" ]
}

executable("stat_test") {
  cflags = ["-g", "-Wall"]
  sources = [ "stat_test.c" ]
}

executable("umask_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "umask_test.c",
  ]
}

executable("futimens_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "futimens_test.c",
  ]
}

executable("stat2_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "stat2_test.c",
  ]
}

executable("stat3_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "stat3_test.c",
  ]

}

executable("chmod_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "chmod_test.c",
  ]

}
