executable("gettimeofday1_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "gettimeofday1_test.c",
  ]
 }

executable("gettimeofday_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "gettimeofday_test.c",
  ]
 }

executable("localtime2_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "localtime2_test.c",
  ]
}

executable("localtime1_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "localtime1_test.c",
  ]
}

executable("time_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "time_test.c",
  ]
}

executable("clock_gettime_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "clock_gettime_test.c",
  ]
}

executable("gettimeofday2_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "gettimeofday2_test.c",
  ]
}

executable("localtime_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "localtime_test.c",
  ]
}

