executable("main") {
  cflags = ["-g", "-Wall"]
  ldflags = ["-ltbox"]
  sources = [
    "main.c",
  ]
}


executable("list_test") {
  cflags = ["-g", "-Wall"]
  ldflags = ["-ltbox"]
  sources = [
    "list_test.c",
  ]
}


executable("vector_test") {
  cflags = ["-g", "-Wall"]
  ldflags = ["-ltbox"]
  sources = [
    "vector_test.c",
  ]
}

executable("vector_mem_test") {
  cflags = ["-g", "-Wall"]
  ldflags = ["-ltbox"]
  sources = [
    "vector_mem_test.c",
  ]
}
