
executable("sort_test") {
  cflags = ["-g", "-Wall"]
  ldflags = ["-ltbox"]
  sources = [
    "sort_test.c",
  ]
}

executable("heap_test1") {
  cflags = ["-g", "-Wall"]
  ldflags = ["-ltbox"]
  sources = [
    "heap_test1.c",
  ]
}

executable("mem_allocator_test") {
  cflags = ["-g", "-Wall"]
  ldflags = ["-ltbox"]
  sources = [
    "mem_allocator_test.c",
  ]
}

executable("heap_test") {
  cflags = ["-g", "-Wall"]
  ldflags = ["-ltbox"]
  sources = [
    "heap_test.c",
  ]
}

executable("main") {
  cflags = ["-g", "-Wall"]
  ldflags = ["-ltbox"]
  sources = [
    "main.c",
  ]
}


executable("list_test") {
  cflags = ["-g", "-Wall"]
  ldflags = ["-ltbox"]
  sources = [
    "list_test.c",
  ]
}


executable("vector_test") {
  cflags = ["-g", "-Wall"]
  ldflags = ["-ltbox"]
  sources = [
    "vector_test.c",
  ]
}

executable("vector_mem_test") {
  cflags = ["-g", "-Wall"]
  ldflags = ["-ltbox"]
  sources = [
    "vector_mem_test.c",
  ]
}
