executable("localtime2_test") {
  sources = [
    "localtime2_test.c",
  ]
}

executable("localtime1_test") {
  sources = [
    "localtime1_test.c",
  ]
}

executable("time_test") {
  sources = [
    "time_test.c",
  ]
}

executable("clock_gettime_test") {
  sources = [
    "clock_gettime_test.c",
  ]
}

executable("gettimeofday_test") {
  sources = [
    "gettimeofday_test.c",
  ]
}

executable("localtime_test") {
  sources = [
    "localtime_test.c",
  ]
}

