executable("nanosleep_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "nanosleep_test.c",
  ]
}

executable("time_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "time_test.c",
  ]
}

executable("clock_gettime_test") {
  cflags = ["-g", "-Wall"]
  sources = [
    "clock_gettime_test.c",
  ]
}

