executable("lockf_test") {
  sources = [
    "lockf_test.c",
  ]
}

executable("getopt_test") {
  sources = [
    "getopt_test.c",
  ]
}

executable("getppid_test") {
  sources = [
    "getppid_test.c",
  ]
}

executable("crypt_test") {
  sources = [
    "crypt_test.c",
  ]

  ldflags = ["-lcrypt"]
}

executable("getspnam_test") {
  sources = [
    "getspnam_test.c",
  ]

  ldflags = ["-lcrypt"]
}

executable("getpass_test") {
  sources = [
    "getpass_test.c",
  ]
}

executable("write_test") {
  sources = [
    "write_test.c",
  ]
}

executable("dup2_test") {
  sources = [
    "dup2_test.c",
  ]
}

executable("dup_test") {
  sources = [
    "dup_test.c",
  ]
}

executable("fork5_test") {
  sources = [
    "fork5_test.c",
  ]
}

executable("sleep_test1") {
  sources = [
    "sleep_test1.c",
  ]
}

executable("sleep_test") {
  sources = [
    "sleep_test.c",
  ]
}

executable("setsid_test") {
  sources = [
    "setsid_test.c",
  ]
}

executable("fork4_test") {
  sources = [
    "fork4_test.c",
  ]

}

executable("execl_test") {
  sources = [
    "execl_test.c",
  ]
}

executable("execlp_test") {
  sources = [
    "execlp_test.c",
  ]
}

executable("fork1_test") {
  sources = [
    "fork1_test.c",
  ]
}

executable("unlink_test") {
  sources = [
    "unlink_test.c",
  ]
}

executable("getcwd_test") {
  sources = [
    "getcwd_test.c",
  ]
}

executable("chdir_test") {
  sources = [
    "chdir_test.c",
  ]
}

executable("access_test") {
  sources = [
    "access_test.c",
  ]
}

executable("getpid_test") {
  sources = [
    "getpid_test.c",
  ]
}

executable("read_test") {
  sources = [
    "read_test.c",
  ]
}

executable("getuid_test") {
  sources = [
    "getuid_test.c",
  ]
}

executable("lseek_test") {
  sources = [
    "lseek_test.c",
  ]
}
