executable("main") {
  cflags = ["-g", "-Wall"]
  libs = ["uv"]
  sources = [
    "main.c",
  ]
}

executable("uv_fs_stat_test") {
  cflags = ["-g", "-Wall"]
  libs = ["uv"]
  sources = [
    "uv_fs_stat_test.c",
  ]
}

executable("uv_fs_scandir_test") {
  cflags = ["-g", "-Wall"]
  libs = ["uv"]
  sources = [
    "uv_fs_scandir_test.c",
  ]
}
